# amqp-demos

./: .gitignore
amqp-cpp11-demo/: .gitignore  CMakeLists.txt  README.md
amqp-cpp11-demo/aliyuncred-cpp11/: .gitignore  CMakeLists.txt  README.md
amqp-cpp11-demo/aliyuncred-cpp11/include/aliyun/: AliyunCred.h
amqp-cpp11-demo/aliyuncred-cpp11/include/openssl/: opensslconf.h
amqp-cpp11-demo/aliyuncred-cpp11/sample/aliyuncred/: CMakeLists.txt  sample.cpp
amqp-cpp11-demo/aliyuncred-cpp11/sample/amqpCpp/: CMakeLists.txt  MyLibuvHandler.h  main.cpp
amqp-cpp11-demo/aliyuncred-cpp11/src/: AliyunCred.cpp
amqp-cpp11-demo/demos/: Consumer.cpp  Producer.cpp
amqp-cpp11-demo/include/: AmqpDemo.h  DemoHandler.h
amqp-dotnet-demo/: Program.cs  RabbitMQConsoleApp.csproj  RabbitMQService.cs  appsettings.json  readme.md
amqp-dotnet-demo/Receive/: Receive.cs  Receive.csproj
amqp-dotnet-demo/Send/: Send.cs  Send.csproj
amqp-dotnet-demo/Util/: AliyunMechanism.cs  AliyunMechanismFactory.cs  AliyunUtils.cs  Util.cs  Util.csproj
amqp-go-demo/: go.mod  go.sum
amqp-go-demo/amqp091/pub/: producer.go
amqp-go-demo/amqp091/sub/: consumer.go
amqp-go-demo/demo/: Consumer.go  Publisher.go
amqp-go-utils/demo/: Consumer.go  Publisher.go  main.go
amqp-go-utils/utils/: HmacUtils.go  UserUtils.go
amqp-java-demo/: pom.xml
amqp-java-demo/src/main/java/: Config.java  ConnectionFactory.java  ConsumeTest.java  Consumer.java  Producer.java  ProducerTest.java
amqp-node-demo/: .babelrc  .prettierrc  LICENSE  README.md  consume.js  package-lock.json  package.json  send.js  tsconfig.json  tslint.json
amqp-node-demo/src/: index.ts
amqp-node-demo/src/typings/: index.d.ts
amqp-node-demo/src/utils/: userUtils.ts
amqp-node-demo/test/: index.js
amqp-php-demo/: AliyunCredentialsProvider.php  composer.json  config.php  index.php  receive.php  receiveWithProp.php  send.php  sendWithProp.php
amqp-php-demo/demos/: receive.php  receiveWithProp.php  send.php  sendWithProp.php
amqp-python-celery-demo/: README.md
amqp-python-celery-demo/test_celery/: celery.py  run_tasks.py  tasks.py
amqp-python-demo/: AliyunCredentialsProvider2.py  AliyunCredentialsProvider3.py  README.md  blockingConnectionConsumeWithRecovery.py  connection.py  receive.py  send.py
amqp-ruby-demo/: AliyunCredentialsProvider.rb  receive.rb  send.rb
amqp-springboot-demo/: .gitignore
amqp-springboot-demo/SpringBootDemoNew/: pom.xml
amqp-springboot-demo/SprintBootDemo/: .gitignore  .project  pom.xml  readme
amqp-springcloud-stream-demo/amqp-demo/: pom.xml  readme
amqp-springcloud-stream-demo/amqp-springcloud-stream-consumer-demo/: pom.xml  readme
amqp-springcloud-stream-demo/amqp-springcloud-stream-producer-demo/: pom.xml  readme
amqp-springcloudbus-demo/: pom.xml  readme
amqp-springcloudbus-demo/config-client/: pom.xml  readme
amqp-springcloudbus-demo/config-server/: pom.xml
amqp-springcloudbus-demo/eureka-server/: pom.xml
spring-rabbit-demo/: pom.xml
spring-rabbit-demo/src/main/resources/: spring-rabbitmq.xml
(+53 files in other folders)
